// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductProperties /> should not render when an empty list of properties is passed 1`] = `null`;

exports[`<ProductProperties /> should not render when no properties are passed 1`] = `null`;

exports[`<ProductProperties /> should render as expected when properties are passed 1`] = `
<ul
  class="ui-shared__product-properties"
>
  <li>
    Label One: Value One
  </li>
  <li>
    Label Two: Value Two
  </li>
</ul>
`;

exports[`<ProductProperties /> should use the ellipsis component when the lineClamp prop is passed  1`] = `
<ul
  class="ui-shared__product-properties"
>
  <li>
    <div
      class=" common__ellipsis"
      style="overflow: hidden; text-overflow: ellipsis; webkit-box-orient: vertical; display: -webkit-box; webkit-line-clamp: 2;"
    >
      Label One: Value One
    </div>
  </li>
  <li>
    <div
      class=" common__ellipsis"
      style="overflow: hidden; text-overflow: ellipsis; webkit-box-orient: vertical; display: -webkit-box; webkit-line-clamp: 2;"
    >
      Label Two: Value Two
    </div>
  </li>
</ul>
`;
